--- a/AES_TeamTool/packages.config
+++ b/AES_TeamTool/packages.config
@@ -8,6 +8,8 @@
   <package id="Microsoft.AspNet.WebApi.Cors" version="5.2.7" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.Owin" version="5.2.7" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.7" targetFramework="net461" />
+  <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="3.6.0" targetFramework="net461" />
+  <package id="Microsoft.Net.Compilers" version="3.11.0" targetFramework="net461" developmentDependency="true" />
   <package id="Microsoft.Owin" version="4.2.0" targetFramework="net461" />
   <package id="Microsoft.Owin.Cors" version="4.2.0" targetFramework="net461" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="4.2.0" targetFramework="net461" />
