--- a/AES_TeamTool/AES_TeamTool.csproj
+++ b/AES_TeamTool/AES_TeamTool.csproj
@@ -25,6 +25,7 @@
     <UseGlobalApplicationHostFile />
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
+    <Use64BitIISExpress />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -78,6 +79,8 @@
     <Reference Include="Swashbuckle.Core, Version=1.0.0.0, Culture=neutral, PublicKeyToken=cd1bb07a5ac7c7bc, processorArchitecture=MSIL">
       <HintPath>..\packages\Swashbuckle.Core.5.6.0\lib\net40\Swashbuckle.Core.dll</HintPath>
     </Reference>
+    <Reference Include="System.Data.Linq" />
+    <Reference Include="System.DirectoryServices" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Net.Http.Formatting, Version=5.2.7.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.AspNet.WebApi.Client.5.2.7\lib\net45\System.Net.Http.Formatting.dll</HintPath>
@@ -126,22 +129,23 @@
     <Compile Include="App_Start\WebConfig.cs" />
     <Compile Include="App_Start\SwaggerConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
-    <Compile Include="Controllers\ChangeManagementController.cs" />
-    <Compile Include="Controllers\RouterSpecController.cs" />
-    <Compile Include="Controllers\SignalRSpecController.cs" />
-    <Compile Include="Controllers\TVDashBoardController.cs" />
+    <Compile Include="Controllers\ChangeManageController.cs" />
+    <Compile Include="Controllers\MembershipFunctionController.cs" />
+    <Compile Include="Controllers\MembershipRoleController.cs" />
+    <Compile Include="Controllers\MembershipUserController.cs" />
+    <Compile Include="Controllers\UnitTestController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Models\BaseResponseBody.cs" />
+    <Compile Include="Models\MemberShipModel.cs" />
+    <Compile Include="Models\ResponseBody.cs" />
     <Compile Include="Models\ChangeManagement.cs" />
-    <Compile Include="Models\HubClients.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SignalR\IndexHub.cs" />
-    <Compile Include="Utils\BaseMailHandler.cs" />
-    <Compile Include="Utils\BaseSQLHandler.cs" />
-    <Compile Include="Utils\CommonTextLogger.cs" />
-    <Compile Include="Utils\QueryValues.cs" />
+    <Compile Include="Utils\MailHelper.cs" />
+    <Compile Include="Utils\SqlHelper.cs" />
+    <Compile Include="Utils\LogHelper.cs" />
+    <Compile Include="Utils\ValueQuery.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
